fixed sonarqube reported bugs

--- a/src/app/employer/components/add-employee/add-employee.component.html
+++ b/src/app/employer/components/add-employee/add-employee.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="employeeForm" (ngSubmit)="submitForm()">
-    <table>
+    <table aria-label="add employee table">
         <tr>
             <th colspan="2">Add New Employee</th>
         </tr>
