--- a/src/app/user-management/components/login/login.component.html
+++ b/src/app/user-management/components/login/login.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="form.valid && login()" #form="ngForm">
-    <table>
+    <table summary="login form">
         <tr>
-            <td colspan="2">Login</td>
+            <th colspan="2">Login</th>
         </tr>
         <tr>
             <td>Email</td>
