--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="isLoggedIn">
+<ul *ngIf="isLoggedIn">
     <li><a routerLink="employer-list">Employer list</a></li>
     <li><a routerLink="employee-list">Employee list</a></li>
     <li><a routerLink="add-employee">Add Employee</a></li>
 
     <li><a (click)="logout()">Logout</a></li>
-</div>
+</ul>
 <hr>
 <router-outlet></router-outlet>
